// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ulisp compile expression 1`] = `
"  .global _main

  .text

plus:
  ADD RDI, RSI
  MOV RAX, RDI
  RET

  PUSH RDI
  PUSH RSI
  MOV RDI, 31
  PUSH RDI
  PUSH RSI
  MOV RDI, 1
  MOV RSI, 2
  CALL plus
  POP RSI
  POP RDI
  MOV RSI, RAX

  CALL plus
  POP RSI
  POP RDI
  MOV RAX, RAX

_main:
  CALL main
  MOV RDI, RAX
  MOV RAX, 0x2000001
  SYSCALL
"
`;

exports[`ulisp compile function  1`] = `
"  .global _main

  .text

plus:
  ADD RDI, RSI
  MOV RAX, RDI
  RET

main:
  PUSH RDI
  PUSH RSI
  MOV RDI, 1
  MOV RSI, 2
  CALL plus
  POP RSI
  POP RDI
  MOV RAX, RAX

  RET

_main:
  CALL main
  MOV RDI, RAX
  MOV RAX, 0x2000001
  SYSCALL
"
`;

exports[`ulisp compile user defined function and call 1`] = `"[[\\"def\\",\\"plus-two\\",[\\"a\\"],[\\"+\\",\\"a\\",2]],[\\"def\\",\\"main\\",[],[\\"plus-two\\",3]]]"`;

exports[`ulisp compile user defined function and call 2`] = `
"  .global _main

  .text

plus:
  ADD RDI, RSI
  MOV RAX, RDI
  RET

plus_two:
  PUSH RBX
  MOV RBX, RDI
  PUSH RDI
  PUSH RSI
  MOV RDI, RBX
  MOV RSI, 2
  CALL plus
  POP RSI
  POP RDI
  MOV RAX, RAX

  POP RBX
  RET

main:
  PUSH RDI
  MOV RDI, 3
  CALL plus_two
  POP RDI
  MOV RAX, RAX

  RET

_main:
  CALL main
  MOV RDI, RAX
  MOV RAX, 0x2000001
  SYSCALL
"
`;

exports[`ulisp parse function 1`] = `"[[[\\"def\\",\\"main\\",[],[\\"+\\",1,2]]],\\"\\"]"`;
